# usma_bhg

./: BHG_OPERATION.md  CMakeLists.txt  Install_Xeneth.txt  Orig_Install_directions.md  README.md  README.md.orig  SCRIPT_INSTALL.md  Xeneth_Notes_And_Install.txt  bag_record.py  bool_pub.cpp  gobi_subscriber.cpp  img_capture_test.launch  mavproxy_setup.md  package.xml  ros_img_save.py
bhg_calc_ll/: bhg_flight.plan  bhg_flight_plan_v2.ipynb  bhg_flight_v2.plan  bhg_nav_aid.ipynb  gps_analysis.ipynb  mission_plan.py  mission_plan_v2.py
bhg_calc_ll/.ipynb_checkpoints/: bhg_nav_aid-checkpoint.ipynb
env_data/anemometer/: anemometer_input.txt  conv_to_txt.py  output.txt
launch/: acquisition.launch  apm_pluginlists.yaml  ardupilot.launch  ardupilot.launch.orig  bhg_pub_sub.launch  camera.launch  img_capture.launch  img_capture_test.launch  master.launch  px4.launch  rosbridge_websocket.launch  web_gui.launch
qgc_m_generator/: bhg_flight.plan  bhg_flight_plan_v2.ipynb  bhg_flight_v2.plan  bhg_nav_aid.ipynb  mission_plan.py  mission_plan_v2.py
resources/: .bhg_aliases.sh  18285141calibration.yaml  18285440calibration.yaml  Gobi  Pixhawk1_Rocky_YPG2.params  Pixhawk5_Harvey_YPG.params  bhg_install.sh
resources/bhg_trigger/: bhg_trigger.ino  dual_sig_bhg.ino
resources/bhg_trigger/sketch_jun16d/: sketch_jun16d.ino
resources/bhg_trigger04/: bhg_trigger04.ino
resources/dual_sig_trigger/: dual_sig_trigger.ino
src/: .camera_subscriber.cpp.swp  bhg_flir.py  camera_subscriber.cpp  capture_test_triggered.py  csv_writer.cpp  dir_cleanup.py  dir_counter.py  dir_setup.py  dir_setup2.py  flir_oop.py  flir_strobe.py  flir_time_test.py  flir_trigger.py  gobi_oop.cpp  gobi_oop_gs.cpp  gobi_subscriber.cpp  gobi_subscriber2.cpp  gobi_subscriber_oop.cpp  gobi_subscriber_oopLONg.cpp  gobi_trig.cpp  gobi_trig_in.cpp  health_monitor.py  img_player.py  imu_subscriber.cpp  master.launch  mav_monitor.py  mavlink_trigger.py  mavlink_trigger.py.orig  pub_record.py  record_mux.py  ros_img_save.py  ros_img_save.py.orig  ros_img_save_271219.py  ros_img_save_orig.py  rosbag_recorder.py  roscpp_time.cpp  rospy_datetime.py  rtcm_pub.py  rtk_corrections.cpp  rtk_corrections.py  (+3 more)
usma_bhg/: package.xml
usma_bhg/launch/: camera.launch  master.launch
usma_bhg/src/: bag_record.py  bag_record_271219.py  bool_pub.cpp  capture_test.py  gobi_subscriber.cpp  ros_img_save.py
www/: eventemitter2.min.js  simple.html
www/html/: index.html  video.html
www/js/: bhg_status.js
